cabal-version: 2.4
name: language-fennel
version: 0

library
  build-depends:
   base,
   megaparsec,
   parser-combinators,
   prettyprinter ^>= 1.7.1,
   text
  default-extensions:
    BlockArguments
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    PatternSynonyms
  default-language: GHC2021
  exposed-modules: Language.Fennel
  ghc-options: -Wall
  hs-source-dirs: src
